--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -89,6 +89,9 @@
       <HintPath>dlls\GraphSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HidSharp, Version=2.0.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\HidSharp.2.0.8\lib\net35\HidSharp.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>dlls\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
@@ -97,9 +100,11 @@
     </Reference>
     <Reference Include="md.stdl, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\md-stdl.1.0.7\lib\net47\md.stdl.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="mp.pddn, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\mp.pddn.1.3.2\lib\net47\mp.pddn.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MsgPack, Version=1.0.0.0, Culture=neutral, PublicKeyToken=a2625990d5dc0167, processorArchitecture=MSIL">
       <HintPath>packages\MsgPack.Cli.1.0.0\lib\net46\MsgPack.dll</HintPath>
@@ -243,6 +248,9 @@
     <Compile Include="Camera\ModularCam.cs" />
     <Compile Include="Camera\ModularCamNode.cs" />
     <Compile Include="devices\DevicesDirectInputNode.cs" />
+    <Compile Include="devices\Hid\HidDeviceWrap.cs" />
+    <Compile Include="devices\Hid\ListDevices.cs" />
+    <Compile Include="devices\Hid\OpenDevicesHidNode.cs" />
     <Compile Include="devices\ValueTouchProcessorNode.cs" />
     <Compile Include="devices\vjoy.cs" />
     <Compile Include="excel\ExcelEPPlus.cs" />
