--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
   <package id="fasterflect" version="2.1.3" targetFramework="net47" />
+  <package id="HidSharp" version="2.0.8" targetFramework="net47" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
   <package id="md-stdl" version="1.0.7" targetFramework="net47" />
   <package id="mp.pddn" version="1.3.2" targetFramework="net47" />
