--- a/mp.essentials.csproj
+++ b/mp.essentials.csproj
@@ -99,8 +99,8 @@
       <HintPath>dlls\LzmaSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="md.stdl, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\md-stdl.1.0.7\lib\net47\md.stdl.dll</HintPath>
+    <Reference Include="md.stdl, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\md-stdl.1.0.9\lib\net47\md.stdl.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="mp.pddn, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
@@ -254,6 +254,7 @@
     <Compile Include="devices\Hid\HidDeviceWrap.cs" />
     <Compile Include="devices\Hid\ListDevices.cs" />
     <Compile Include="devices\Hid\OpenDevicesHidNode.cs" />
+    <Compile Include="devices\RawInputDevices.cs" />
     <Compile Include="devices\ValueTouchProcessorNode.cs" />
     <Compile Include="devices\vjoy.cs" />
     <Compile Include="excel\ExcelEPPlus.cs" />
@@ -366,6 +367,7 @@
     <Compile Include="vvvv\NodeGrapher.cs" />
     <Compile Include="vvvv\SetCursor.cs" />
     <Compile Include="vvvv\vvvvNodePathNode.cs" />
+    <Compile Include="windows\DeleteFolderNode.cs" />
     <Compile Include="windows\FileCompressorNodes.cs" />
     <Compile Include="windows\HandleWindowsPIDNode.cs" />
     <Compile Include="windows\PIDWindowsHandleNode.cs" />
