--- a/packages.config
+++ b/packages.config
@@ -8,7 +8,7 @@
   <package id="fasterflect" version="2.1.3" targetFramework="net47" />
   <package id="HidSharp" version="2.0.8" targetFramework="net47" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
-  <package id="md-stdl" version="1.0.7" targetFramework="net47" />
+  <package id="md-stdl" version="1.0.9" targetFramework="net47" />
   <package id="mp.pddn" version="1.3.2" targetFramework="net47" />
   <package id="MsgPack.Cli" version="1.0.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
@@ -18,6 +18,7 @@
   <package id="SharpDX.RawInput" version="4.0.1" targetFramework="net461" />
   <package id="SharpMessage" version="2.9.10" targetFramework="net461" />
   <package id="SimMetrics.Net" version="1.0.5" targetFramework="net47" />
+  <package id="System.Management.Automation" version="6.2.0" targetFramework="net47" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net47" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
   <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
