--- a/packages.config
+++ b/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="AudioSwitcher.AudioApi" version="4.0.0-alpha5" targetFramework="net47" />
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="4.0.0-alpha5" targetFramework="net47" />
+  <package id="Ceras" version="4.1.7" targetFramework="net47" />
   <package id="Cyotek.Windows.Forms.ColorPicker" version="1.7.2" targetFramework="net47" />
   <package id="EPPlus" version="4.1.1" targetFramework="net47" />
   <package id="EPPlus.Extensions" version="2.0.0.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
   <package id="fasterflect" version="2.1.3" targetFramework="net47" />
   <package id="HidSharp" version="2.1.0" targetFramework="net47" />
   <package id="LZMA-SDK" version="9.20" targetFramework="net47" />
